--- a/Thursday_03202025.md
+++ b/Thursday_03202025.md
@@ -1,4 +1,4 @@
-- Dumbell Deadlifts - 4 x 5 thinking 45lbs each 
+- Dumbell Deadlifts - 4 x 5 thinking 45lbs each -- went 60lbs each was hard but good
 - Incline Dumbell Press - 3 x 10 thinking 45lbs each 
 - Dumbell Snatch - 3 x 8 thinking 40lbs each 
 - Joe's Ab Circus
