--- a/Thursday_03202025.md
+++ b/Thursday_03202025.md
@@ -1,5 +1,5 @@
 - Dumbell Deadlifts - 4 x 5 thinking 45lbs each -- went 60lbs each was hard but good
-- Incline Dumbell Press - 3 x 10 thinking 45lbs each 
+- Incline Dumbell Press - 3 x 10 thinking 45lbs each -- went 60lbs also. was hard 
 - Dumbell Snatch - 3 x 8 thinking 40lbs each 
 - Joe's Ab Circus
 
