--- a/Thursday_03202025.md
+++ b/Thursday_03202025.md
@@ -1,15 +1,4 @@
 - Dumbell Deadlifts - 4 x 5 thinking 45lbs each -- went 60lbs each was hard but good
 - Incline Dumbell Press - 3 x 10 thinking 45lbs each -- went 60lbs also. was hard 
-- Dumbell Snatch - 3 x 8 thinking 40lbs each 
-- Joe's Ab Circus
-
-Joe's Ab Circus
-- Ten Pushups in between each set
-- You have n minutes and each workout is within the minute, the rest is rest
-1. Alternating Leg Lifts (up 6in, down, out, all the way up)
-2. Seal Scissors
-3. Toe Touches
-4. Russian Twists
-5. Plank (1-minute, the 1-minute rest) 
-6. Hold the World
-- Done
+- Dumbell Snatch - 3 x 8 thinking 40lbs each  -- did 40. easier on right arm. 
+- decline weighted situps 3 x 15
