--- a/Thursday_03202025.md
+++ b/Thursday_03202025.md
@@ -1,6 +1,6 @@
-- Dumbell Deadlifts - 4 x 5 thinking 45lbs each -- went 60lbs each was hard but good
-- Incline Dumbell Press - 3 x 10 thinking 45lbs each -- went 60lbs also. was hard 
-- Dumbell Snatch - 3 x 8 thinking 40lbs each  -- did 40. easier on right arm. 
-- Decline weighted situps 3 x 15 -- halfways with 10lbs. feel tightness in lower back. fear of going down all the when i do in past there is a seeminlgly benign click that freaks me out. 
+1. Dumbell Deadlifts - 4 x 5 thinking 45lbs each -- went 60lbs each was hard but good
+2. Incline Dumbell Press - 3 x 10 thinking 45lbs each -- went 60lbs also. was hard 
+3. Dumbell Snatch - 3 x 8 thinking 40lbs each  -- did 40. easier on right arm. 
+4. Decline weighted situps 3 x 15 -- halfways with 10lbs. feel tightness in lower back. fear of going down all the when i do in past there is a seeminlgly benign click that freaks me out. 
 
 - Notes: overall this may be the best, heaviest independent workout ive ever done. started out strong and surprised myself with heavier weight. the make a face distortion because its that heavy wanhee advice made sense and clicked for me here. 
