--- a/Saturday_03222025.md
+++ b/Saturday_03222025.md
@@ -3,7 +3,7 @@
 2. Leg extensions 3 x 8, 156
 3. Leg Curls 1 x 4 132
 4. DB bench 65 2 x 6 attempted 3rd set failed after 1
-5. Overhead shoulder machine 4 x 8
+5. Overhead shoulder machine 4 x 8 108
 - **Bench Press**: 4 sets, 6–8 reps  
 - **Overhead Shoulder Press**: 4 sets, 8 reps  
 - **Pull-ups or Lat Pulldown**: 3 sets, 10 reps  
