--- a/Saturday_03222025.md
+++ b/Saturday_03222025.md
@@ -4,6 +4,12 @@
 3. Leg Curls 1 x 4 132
 4. DB bench 65 2 x 6 attempted 3rd set failed after 1
 5. Overhead shoulder machine 4 x 8 108
+6. Lat pull downs 3 x 10 108
+7. DB rows 3 x 6 
+8. Bicep Curls 3 x 6 
+9. Tricep extensions 3 x 6 
+
+
 - **Bench Press**: 4 sets, 6–8 reps  
 - **Overhead Shoulder Press**: 4 sets, 8 reps  
 - **Pull-ups or Lat Pulldown**: 3 sets, 10 reps  
