--- a/Saturday_03222025.md
+++ b/Saturday_03222025.md
@@ -5,7 +5,7 @@
 4. DB bench 65 2 x 6 attempted 3rd set failed after 1
 5. Overhead shoulder machine 4 x 8 108
 6. Lat pull downs 3 x 10 108
-7. DB rows 3 x 6 
+7. DB rows 3 x 6 55
 8. Bicep Curls 3 x 6 
 9. Tricep extensions 3 x 6 
 
