--- a/Monday_032425.md
+++ b/Monday_032425.md
@@ -1,6 +1,6 @@
 ### Day 1 - Upper Body Strength
 
-- **Bench Press**: 4 sets, 6-8 reps  
+- **Bench Press Machine**: 4 sets, 8 reps 132, 132 144 156
 - **Overhead Shoulder Press**: 4 sets, 8 reps  
 - **Pull-ups or Lat Pulldown**: 3 sets, 10 reps  
 - **Barbell Rows**: 3 sets, 10 reps  
