--- a/Monday_032425.md
+++ b/Monday_032425.md
@@ -2,6 +2,6 @@
 
 - **Bench Press Machine**: 4 sets, 8 reps 132, 132 144 156
 - **Overhead Shoulder Press**: 4 sets, 8 reps 108 throughout   
-- **Pull-ups or Lat Pulldown**: 3 sets, 10 reps  
+- **Pull-ups or Lat Pulldown**: 3 sets, 10 reps  108 throughout 
 - **Barbell Rows**: 3 sets, 10 reps  
 - **Biceps Curls & Triceps Extensions**: 3 sets, 12 reps  
