--- a/Monday_032425.md
+++ b/Monday_032425.md
@@ -4,4 +4,4 @@
 - **Overhead Shoulder Press**: 4 sets, 8 reps 108 throughout   
 - **Pull-ups or Lat Pulldown**: 3 sets, 10 reps  108 throughout 
 - **Barbell Rows**: 3 sets, 10 reps  55 throughout 
-- **Biceps Curls & Triceps Extensions**: 3 sets, 12 reps  bis 35 3 x 8 
+- **Biceps Curls & Triceps Extensions**: 3 sets, 12 reps  bis 35 3 x 8 tris 3 x 12 45
