--- a/Tuesday_03242025.md
+++ b/Tuesday_03242025.md
@@ -3,7 +3,7 @@
 1. **Goblet Squats (Dumbbell + Bench behind for depth)** – 4 sets, 8 reps  25 45 55
    *Hold a heavy dumbbell at your chest, squat to just above bench height for consistent depth.*
 
-2. **Romanian Deadlifts (Dumbbells)** – 4 sets, 6 reps  
+2. **Romanian Deadlifts (Dumbbells)** – 4 sets, 6 reps  30s
    *Focus on hinging at the hips, slight bend in knees, stretch the hamstrings.*
 
 3. **Bulgarian Split Squats (Dumbbells + Bench)** – 3 sets, 10 reps per leg  
