--- a/Tuesday_03242025.md
+++ b/Tuesday_03242025.md
@@ -6,7 +6,7 @@
 2. **Romanian Deadlifts (Dumbbells)** – 4 sets, 6 reps  30s
    *Focus on hinging at the hips, slight bend in knees, stretch the hamstrings.*
 
-3. **Bulgarian Split Squats (Dumbbells + Bench)** – 3 sets, 10 reps per leg  
+3. **Bulgarian Split Squats (Dumbbells + Bench)** – 3 sets, 10 reps per leg  0 20 0
    *Back foot on bench, dumbbells at sides.*
 
 4. **Leg Curl Machine** – 3 sets, 12 reps  
