--- a/Tuesday_03242025.md
+++ b/Tuesday_03242025.md
@@ -10,7 +10,7 @@
    *Back foot on bench, dumbbells at sides.*
 
 4. **Leg Curl Machine** – 3 sets, 12 reps  
-   *Hamstring isolation work to complement RDLs.*
+   *Hamstring isolation work to complement RDLs.* 72 84 96
 
 5. **Leg Extension Machine** – 3 sets, 12 reps  
    *Quad isolation to finish the compound work.*
