--- a/Tuesday_03242025.md
+++ b/Tuesday_03242025.md
@@ -12,10 +12,10 @@
 4. **Leg Curl Machine** – 3 sets, 12 reps  
    *Hamstring isolation work to complement RDLs.* 72 84 96
 
-5. **Leg Extension Machine** – 3 sets, 12 reps  
+5. **Leg Extension Machine** – 3 sets, 12 reps  96 108 120
    *Quad isolation to finish the compound work.*
 
-6. **Standing Calf Raises (Dumbbells)** – 3 sets, 15–20 reps  
+6. **Standing Calf Raises (Dumbbells)** – 3 sets, 15–20 reps  1 set of 36
    *Use dumbbells and perform on a step or flat ground.*
 
 7. **Treadmill Sprints** – 6 rounds  
